syntax = "proto3";

package Application;

// Define the request message
message FlashcardRequest {
	repeated string subjectId = 1;
}
message UserFlashcardLearningRequest {
}

// Define the response message
message FlashcardResponse {
	repeated string flashcardId = 1;
}
message UserFlashcardLearningResponse {
	repeated UserFlashcardLearning userFlashcardLearning = 1;
}
message UserFlashcardLearning {
	string userId = 1;
	string flashcardId = 2;
	string flashcardContentId = 3;
	repeated string lastReviewDateHistory = 4;
    repeated double timeSpentHistory = 5;
}
service FlashcardServiceRpc {
    rpc GetUserFlashcardLearning(UserFlashcardLearningRequest) returns (UserFlashcardLearningResponse);
	rpc GetFlashcardId(FlashcardRequest) returns (FlashcardResponse);
}
